--- a/TODO.txt
+++ b/TODO.txt
@@ -16,4 +16,7 @@ Il faut tout revoir de ce cote la
 Aussi, quand j'appelle l'api coinbase pour avoir mes accounts, j'ai pas la crypto AVT ...
 
 
+mettre get price dans une methode de crypto pour pouvoir faire l'actualisation de max price en meme temps
+
+
 todo : understand eth2 exception
