--- a/TODO.txt
+++ b/TODO.txt
@@ -20,3 +20,5 @@ mettre get price dans une methode de crypto pour pouvoir faire l'actualisation d
 
 
 todo : understand eth2 exception
+
+log error critic devrait etre juste de l'ecriture dans les log et pas arreter le programme
